add pabc and ita to podiumd (#193)
Tested on our podiumd replica environment.

values to specify per environment: 
| value | description |
|---|---|
| pabc.settings.database.host  |  host of the database server  |
| pabc.settings.database.username | username pabc will use to access the
database |
| pabc.settings.database.password| password pabc will use to access the
database |
| pabc.settings.apiKeys| array of api keys to accept. `zac.pabc.apiKey`
should be one of these values |
| pabc.settings.oidc.authority|  the realm url in keycloak  |
| pabc.settings.oidc.clientSecret| can be generated, will be used both
in the keycloak realm config as well as in pabc |
| pabc.settings.oidc.oidcUrl| public url for pabc. used to configure
keycloak |
| pabc.settings.keycloakAdmin.clientSecret| can be generated, will be
used both in the keycloak realm config as well as in pabc |
| zac.featureFlags.pabcIntegration| true or false. enables/disables the
feature flag in zac to connect to pabc. |
| zac.pabc.apiKey| api key zac uses to connect to pabc.
`pabc.settings.apiKeys` should contain this value. |
| zac.pabc.url|  base url for pabc.  |

---------

Co-authored-by: Bas de Wit <52208549+bas-info-nl@users.noreply.github.com>
Co-authored-by: sytskevanhasselt <sytske@icatt.nl>
Co-authored-by: Sytske van Hasselt <53014699+sytskevanhasselt@users.noreply.github.com>

--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -78,3 +78,8 @@ dependencies:
     repository: "oci://ghcr.io/interne-taak-afhandeling"
     version: 2.0.1
     condition: ita.enabled
+  - name: pabc
+    alias: pabc
+    repository: "oci://ghcr.io/platform-autorisatie-beheer-component"
+    version: 1.0.0
+    condition: pabc.enabled
