--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1942,6 +1942,7 @@ fullnameOverride: ""
 zac:
   featureFlags:
     bpmnSupport: true
+    pabcIntegration: false 
   auth:
     server: http://keycloak.example.nl
     realm: podiumd
@@ -2031,6 +2032,9 @@ zac:
       rsin: "000000000"
     verantwoordelijke:
       rsin: "000000000"
+  pabc:
+    apiKey: ""
+    url: ""
   zacInternalEndpointsApiKey: "dummy"
   smartDocuments:
     enabled: false
@@ -2259,7 +2263,6 @@ apiproxy:
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apikvk/vesprof/v1/v1/vestigingsprofielen"
 
 ita:
-  baseUrl: "https://ontw-ita.example.nl"
   enabled: true
   replicaCount: 1
   imagePullSecrets: []
@@ -2281,7 +2284,7 @@ ita:
 
   apiConnections:
     openKlant:
-      baseUrl: "https://openklant.example.nl"
+      baseUrl: "https://openklant.example.nl/klantinteracties/api/v1/"
       apiKey: "REP_OPENKLANT_CREDENTIALS_ITA_TOKEN_REP"
     object:
       baseUrl: "https://objecten.example.nl/api/v2/"
@@ -2292,30 +2295,33 @@ ita:
       key: "REP_OPENZAAK_CREDENTIALS_ITA_SECRET_REP"
 
   logboek:
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/2eb81bd1-0d2b-4123-84ab-d55b99b9e75a
+    # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_ITA_ACTIVITEITENLOG_UUID_REP
     typeVersion: 1
-    # uuid in bovenstaande waarde kan afwijken als het objecttype handmatig is aangemaakt
 
   afdeling:
-    uuid: "c8d301f9-80b8-4575-8b29-3e9431f92994"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994
+    # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
+    uuid: "REP_CONTACT_AFDELING_UUID_REP"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_AFDELING_UUID_REP
     typeVersion: 1
-    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt
 
   groep:
-    uuid: "cbec27ac-157b-490b-b586-9e8a8f5bbb85"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85
+    # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
+    uuid: "REP_CONTACT_GROEP_UUID_REP"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_GROEP_UUID_REP
     typeVersion: 1
-    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt
 
   smtp:
     host: "mail.example.nl"
     port: "587"
-    username: "dummy"
-    password: "dummy"
-    fromEmail: "from@domain.ext"
+    username: ""
+    password: ""
+    fromEmail: ""
     enableSsl: "true"
 
+  ita:
+    baseUrl: "https://ita.example.nl"
+    
   web:
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
@@ -2333,7 +2339,7 @@ ita:
       clientSecret: "REP_ITA_OIDC_CLIENT_SECRET_REP"
       itaSystemAccessRole: "ITA_Gebruiker"
       functioneelBeheerderRole: "ITA_Functioneel_Beheerder"
-      nameClaimType: "preferred_username"
+      nameClaimType: "name"
       roleClaimType: "roles"
       objectregisterMedewerkerIdClaimType: "samaccountname"
       emailClaimType: "email"
@@ -2364,3 +2370,43 @@ serviceAccount:
   automount: true
   annotations: {}
   name: ""
+
+
+
+pabc:
+  enabled: true
+  fullnameOverride: "pabc"
+  postgresql:
+    enabled: false
+  # image:
+  #   # this is the same version as the chart by default, so consider leaving this empty
+  #   tag: 1.0.0
+  # migrations:
+  #   image:
+  #     # this is the same version as the chart by default, so consider leaving this empty
+  #     tag: 1.0.0
+  
+  settings:
+    database:
+      host: ""
+      # port: 5432
+      name: "pabc"
+      username: "pabc"
+      password: ""
+
+    apiKeys: [""]
+    
+    oidc:
+      authority: ""
+      clientId: "pabc"
+      clientSecret: ""
+      functioneelBeheerderRole: "administrator"
+      nameClaimType: "name"
+      roleClaimType: "roles"
+      emailClaimType: "email"
+      oidcUrl: "https://pabc.example.nl"
+
+    keycloakAdmin:
+      clientId: "pabc-keycloak-admin"
+      clientSecret: ""
+  
