updated input for smoelenboek_token

--- a/charts/podiumd/templates/adapter-secret.yaml
+++ b/charts/podiumd/templates/adapter-secret.yaml
@@ -11,5 +11,5 @@ stringData:
   CLIENTS__0__SECRET: {{ .Values.kiss.adapter.secret | quote }}
   ESUITE_CLIENT_ID: {{ .Values.kiss.adapter.esuite.clientId | quote }}
   ESUITE_CLIENT_SECRET: {{ .Values.kiss.adapter.esuite.secret | quote }}
-  SMOELENBOEK_TOKEN: {{ .Values.kiss.settings.syncJobs.medewerkers.token | quote }}
+  SMOELENBOEK_TOKEN: {{ .Values.kiss.adapter.objecten.token | quote }}
 {{- end }}
