Update KISS to 2.0 in PodiumD (#203)
## Beschrijving
Aanpassingen aan PodiumD Helm Charts, zodat deze gebruik kan maken van
de KISS-helm chart, die vanaf KISS v2.0.0 onderdeel is van KISS.
De KISS-templates zijn verwijderd. 

## Jira Ticket
Solves IN-1377

## Impact
- [ ] WEL breaking changes
- [ ] Documentatie bijgewerkt [dit moet nog]

---------

Co-authored-by: Felix Cornelissen <felix@icatt.nl>

--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -78,6 +78,12 @@ dependencies:
     repository: "oci://ghcr.io/interne-taak-afhandeling"
     version: 2.0.1
     condition: ita.enabled
+  - name: kiss-chart
+    alias: kiss
+    repository: "oci://ghcr.io/klantinteractie-servicesysteem"
+    version: 2.0.0
+    condition: kiss.enabled
+
   - name: pabc
     alias: pabc
     repository: "oci://ghcr.io/platform-autorisatie-beheer-component"
