--- a/charts/podiumd/templates/adapter-secret.yaml
+++ b/charts/podiumd/templates/adapter-secret.yaml
@@ -9,7 +9,7 @@ metadata:
 stringData:
   CLIENTS__0__ID: {{ .Values.kiss.adapter.clientId | quote }}
   CLIENTS__0__SECRET: {{ .Values.kiss.adapter.secret | quote }}
-  ESUITE_CLIENT_ID: {{ .Values.kiss.esuite.clientId | quote }}
-  ESUITE_CLIENT_SECRET: {{ .Values.kiss.esuite.secret | quote }}
-  SMOELENBOEK_TOKEN: {{ .Values.kiss.objecten.token | quote }}
+  ESUITE_CLIENT_ID: {{ .Values.kiss.adapter.esuite.clientId | quote }}
+  ESUITE_CLIENT_SECRET: {{ .Values.kiss.adapter.esuite.secret | quote }}
+  SMOELENBOEK_TOKEN: {{ .Values.kiss.adapter.objecten.token | quote }}
 {{- end }}
