--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -355,104 +355,104 @@ openzaak:
       restartPolicy: Never
       resources: {}
     data: ""
-  # e.g. 
-  # data: |-
-  #   sites_config_enable: true
-  #   sites_config:
-  #     items:
-  #     - domain: openzaak.example.nl
-  #       name: Open-Zaak Test
-  #   zgw_consumers_config_enable: true
-  #   zgw_consumers:
-  #     services:
-  #     - identifier: notifications-api
-  #       label: Notificaties API
-  #       api_root: https://opennotificaties.example.nl/api/v1/
-  #       api_connection_check_path: notificaties
-  #       api_type: nrc
-  #       auth_type: api_key
-  #       header_key: Authorization
-  #       header_value: 
-  #         value_from: 
-  #            env: opennotificaties_openzaak_secret
-  #     - identifier: selectielijst-api
-  #       label: Selectielijst API
-  #       api_root: https://selectielijst.openzaak.nl/api/v1/
-  #       api_type: orc
-  #       auth_type: no_auth
-  #   notifications_config_enable: true
-  #   notifications_config:
-  #     notifications_api_service_identifier: notifications-api
-  #     notification_delivery_max_retries: 1
-  #     notification_delivery_retry_backoff: 2
-  #     notification_delivery_retry_backoff_max: 3
-  #   openzaak_selectielijst_config_enable: true
-  #   openzaak_selectielijst_config:
-  #     selectielijst_api_service_identifier: selectielijst-api
-  #     allowed_years:
-  #       - 2020
-  #       - 2017
-  #     default_year: 2020
+    # e.g.
+    # data: |-
+    #   sites_config_enable: true
+    #   sites_config:
+    #     items:
+    #     - domain: openzaak.example.nl
+    #       name: Open-Zaak Test
+    #   zgw_consumers_config_enable: true
+    #   zgw_consumers:
+    #     services:
+    #     - identifier: notifications-api
+    #       label: Notificaties API
+    #       api_root: https://opennotificaties.example.nl/api/v1/
+    #       api_connection_check_path: notificaties
+    #       api_type: nrc
+    #       auth_type: api_key
+    #       header_key: Authorization
+    #       header_value:
+    #         value_from:
+    #            env: opennotificaties_openzaak_secret
+    #     - identifier: selectielijst-api
+    #       label: Selectielijst API
+    #       api_root: https://selectielijst.openzaak.nl/api/v1/
+    #       api_type: orc
+    #       auth_type: no_auth
+    #   notifications_config_enable: true
+    #   notifications_config:
+    #     notifications_api_service_identifier: notifications-api
+    #     notification_delivery_max_retries: 1
+    #     notification_delivery_retry_backoff: 2
+    #     notification_delivery_retry_backoff_max: 3
+    #   openzaak_selectielijst_config_enable: true
+    #   openzaak_selectielijst_config:
+    #     selectielijst_api_service_identifier: selectielijst-api
+    #     allowed_years:
+    #       - 2020
+    #       - 2017
+    #     default_year: 2020
 
-  #   # These are all the applications that need to talk to Open Zaak. 
-  #   # Their secrets are configured in the `vng_api_common_credentials` values below! 
-  #   vng_api_common_applicaties_config_enable: true
-  #   vng_api_common_applicaties:
-  #     items:
-  #     - uuid: 78591bab-9a00-4887-849c-53b21a67782f
-  #       client_ids:
-  #       - open-formulieren
-  #       label: Open Formulieren
-  #       heeft_alle_autorisaties: true
-  #   vng_api_common_credentials_config_enable: true
-  #   vng_api_common_credentials:
-  #     items:
-  #     - identifier: open-formulieren
-  #       secret: 
-  #         value_from: 
-  #            env: openzaak_openforms_secret
-  #   oidc_db_config_enable: true
-  #   oidc_db_config_admin_auth:
-  #     providers:
-  #     - identifier: keycloak-provider
-  #       oidc_use_nonce: true
-  #       oidc_nonce_size: 32
-  #       oidc_state_size: 32
-  #       endpoint_config:
-  #         oidc_op_discovery_endpoint: http://keycloak.example.nl/realms/test/
-  #     items:
-  #     - identifier: admin-oidc
-  #       enabled: true
-  #       oidc_rp_client_id: testid
-  #       oidc_rp_client_secret: 
-  #         value_from: 
-  #            env: keycloak_client_secret
-  #       oidc_rp_scopes_list:
-  #       - openid
-  #       - email
-  #       - profile
-  #       oidc_rp_sign_algo: RS256
-  #       oidc_provider_identifier: keycloak-provider
-  #       userinfo_claims_source: id_token
-  #       options:
-  #         user_settings:
-  #           claim_mappings:
-  #             username:
-  #               - sub
-  #             first_name:
-  #               - given_name
-  #             email:
-  #               - email
-  #           username_case_sensitive: true
-  #         groups_settings:
-  #           claim_mapping:
-  #             - groups
-  #           sync: true
-  #           sync_pattern: '*'
-  #           default_groups: []
-  #           make_users_staff: true
-  #           superuser_group_names:
-  #             - Registreerders
+    #   # These are all the applications that need to talk to Open Zaak.
+    #   # Their secrets are configured in the `vng_api_common_credentials` values below!
+    #   vng_api_common_applicaties_config_enable: true
+    #   vng_api_common_applicaties:
+    #     items:
+    #     - uuid: 78591bab-9a00-4887-849c-53b21a67782f
+    #       client_ids:
+    #       - open-formulieren
+    #       label: Open Formulieren
+    #       heeft_alle_autorisaties: true
+    #   vng_api_common_credentials_config_enable: true
+    #   vng_api_common_credentials:
+    #     items:
+    #     - identifier: open-formulieren
+    #       secret:
+    #         value_from:
+    #            env: openzaak_openforms_secret
+    #   oidc_db_config_enable: true
+    #   oidc_db_config_admin_auth:
+    #     providers:
+    #     - identifier: keycloak-provider
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: http://keycloak.example.nl/realms/test/
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: true
+    #       oidc_rp_client_id: testid
+    #       oidc_rp_client_secret:
+    #         value_from:
+    #            env: keycloak_client_secret
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       oidc_rp_sign_algo: RS256
+    #       oidc_provider_identifier: keycloak-provider
+    #       userinfo_claims_source: id_token
+    #       options:
+    #         user_settings:
+    #           claim_mappings:
+    #             username:
+    #               - sub
+    #             first_name:
+    #               - given_name
+    #             email:
+    #               - email
+    #           username_case_sensitive: true
+    #         groups_settings:
+    #           claim_mapping:
+    #             - groups
+    #           sync: true
+    #           sync_pattern: '*'
+    #           default_groups: []
+    #           make_users_staff: true
+    #           superuser_group_names:
+    #             - Registreerders
     secrets: {}
       # openzaak_openforms_secret: "<openzaak_openforms_secret>"
       # openzaak_openinwoner_secret: "<openzaak_openinwoner_secret>"
@@ -552,7 +552,7 @@ opennotificaties:
     #     - identifier: admin-oidc
     #       enabled: true
     #       oidc_rp_client_id: testid
-    #       oidc_rp_client_secret: 
+    #       oidc_rp_client_secret:
     #         value_from:
     #           env: CLIENT_SECRET
     #       oidc_rp_scopes_list:
@@ -590,7 +590,7 @@ opennotificaties:
     #         api_type: ac
     #         auth_type: zgw
     #         client_id: open-notificaties
-    #         secret: 
+    #         secret:
     #           value_from:
     #             env: opennotificaties_autorisatie_api_secret
     #         user_id: open-notificaties
@@ -604,12 +604,12 @@ opennotificaties:
     #     items:
     #     # Credentials for Open Zaak to be able to make requests to Open Notificaties
     #     - identifier: open-zaak
-    #       secret: 
+    #       secret:
     #         value_from:
     #           env: opennotificaties_openzaak_vng_api_common_secret
     #     # Credentials for Open Notificaties, required for autorisaties subscription
     #     - identifier: open-notificaties
-    #       secret: 
+    #       secret:
     #         value_from:
     #           env: opennotificaties_autorisaties_vng_api_common_secret
     #   notifications_kanalen_config_enable: true
@@ -771,7 +771,7 @@ objecten:
     #       header_key: Authorization
     #       header_value:
     #         value_from:
-    #           env: object_notificaties_token 
+    #           env: object_notificaties_token
     #   notifications_config_enable: true
     #   notifications_config:
     #     notifications_api_service_identifier: notifications-api
@@ -936,7 +936,7 @@ objecttypen:
     #     - identifier: admin-oidc
     #       enabled: true
     #       oidc_rp_client_id: testid
-    #       oidc_rp_client_secret: 
+    #       oidc_rp_client_secret:
     #         value_from:
     #           env: CLIENT_SECRET
     #       oidc_rp_scopes_list:
@@ -1177,11 +1177,11 @@ openklant:
     #       oidc_nonce_size: 32
     #       oidc_state_size: 32
     #       endpoint_config:
-    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/example/      
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/example/
     #   items:
     #   - identifier: admin-oidc
     #     enabled: True
-    #     oidc_provider_identifier: admin-oidc-provider          
+    #     oidc_provider_identifier: admin-oidc-provider
     #     oidc_rp_client_id: openklant.example.nl
     #     oidc_rp_client_secret:
     #       value_from:
@@ -1686,6 +1686,7 @@ kisselastic:
 
 kiss:
   enabled: true
+  nameOverride: contact
   fullnameOverride: contact
 
   # -- Optionally specify extra list of additional environment variables. Not necesarry for KvK / BRP headers, use the settings for these
@@ -1743,7 +1744,7 @@ kiss:
       emailFrom: ""
       emailTo: ""
 
-    groepen: 
+    groepen:
       baseUrl: ""
       objectTypeUrl: ""
       token: ""
@@ -1781,7 +1782,7 @@ kiss:
       clientSecret: ""
       medewerkerIdentificatie:
         claim: preferred_username
-        truncate: 
+        truncate:
 
     organisatieIds: []
 
@@ -1827,7 +1828,7 @@ kiss:
       #     documentenBaseUrl: http://kiss-adapter.%s.svc.cluster.local/zgw-apis-provider/drc/api/v1
       #     useExperimentalQueries: false
       #     zakenBaseUrl: http://kiss-adapter.%s.svc.cluster.local/zgw-apis-provider/zrc/api/v1
-      
+
     syncJobs:
       kennisbank:
         baseUrl: ""
@@ -1846,23 +1847,23 @@ kiss:
         objectTypeUrl: ""
         resources: {}
         schedule: "*/59 * * * *"
-          
+
       vac:
         manageFromKiss: false
-        baseUrl: 
+        baseUrl:
         historyLimit: 1
-        objectTypeUrl: 
+        objectTypeUrl:
         objectTypeVersion: 1
         resources: {}
         schedule: "*/59 * * * *"
         token: ""
 
       sharepoint: []
-        # - clientId: 
-        #   clientSecret: 
-        #   siteUrl: 
-        #   sourceName: 
-        #   tenantId: 
+        # - clientId:
+        #   clientSecret:
+        #   siteUrl:
+        #   sourceName:
+        #   tenantId:
         #   historyLimit: 1
         #   resources: {}
         #   schedule: "*/59 * * * *"
@@ -1874,7 +1875,6 @@ kiss:
         #   restartPolicy: "OnFailure"
         #   sourceName: "my website"
         #   ttlSecondsAfterFinished: 0
-
 
   # this is used for keycloak
   configuration:
@@ -1944,9 +1944,6 @@ kiss:
       secret: ""
       contactverzoektypen: []
       isDefault: true
-
-nameOverride: ""
-fullnameOverride: ""
 
 zac:
   featureFlags:
@@ -2329,7 +2326,7 @@ ita:
 
   ita:
     baseUrl: "https://ita.example.nl"
-    
+
   web:
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
@@ -2380,7 +2377,7 @@ serviceAccount:
   name: ""
 
 pabc:
-  enabled: true
+  enabled: false
   fullnameOverride: "pabc"
   postgresql:
     enabled: false
@@ -2391,7 +2388,7 @@ pabc:
   #   image:
   #     # this is the same version as the chart by default, so consider leaving this empty
   #     tag: 1.0.0
-  
+
   settings:
     database:
       host: ""
@@ -2401,7 +2398,7 @@ pabc:
       password: ""
 
     apiKeys: [""]
-    
+
     oidc:
       authority: ""
       clientId: "pabc"
@@ -2415,4 +2412,3 @@ pabc:
     keycloakAdmin:
       clientId: "pabc-keycloak-admin"
       clientSecret: ""
-  
