--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1685,10 +1685,13 @@ kisselastic:
       tag: "3.1.0"
 
 kiss:
+  image:
+    #   repository: "ghcr.io/klantinteractie-servicesysteem/kiss-frontend"
+    pullPolicy: IfNotPresent
+    tag: "2.0.0"
   enabled: true
   nameOverride: contact
   fullnameOverride: contact
-
   # -- Optionally specify extra list of additional environment variables. Not necesarry for KvK / BRP headers, use the settings for these
   extraEnvVars: []
   # -- Optionally specify extra list of additional volumes, for example to trust extra ca certificates.
@@ -2360,7 +2363,7 @@ ita:
 
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.poller"
-      tag: "2.0.0"
+      tag: "2.0.1"
       pullPolicy: Always
 
     notification:
@@ -2381,13 +2384,11 @@ pabc:
   fullnameOverride: "pabc"
   postgresql:
     enabled: false
-  # image:
-  #   # this is the same version as the chart by default, so consider leaving this empty
-  #   tag: 1.0.0
-  # migrations:
-  #   image:
-  #     # this is the same version as the chart by default, so consider leaving this empty
-  #     tag: 1.0.0
+  image:
+    tag: 1.0.0
+  migrations:
+    image:
+      tag: 1.0.0
 
   settings:
     database:
