fixed objetTypeVersion from string to integer

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1760,7 +1760,7 @@ kiss:
     logboek:
       baseUrl: ""
       objectTypeUrl: ""
-      objectTypeVersion: "1"
+      objectTypeVersion: 1
       token: ""
 
     managementInformatie:
