--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1769,9 +1769,9 @@ kiss:
     oidc:
       authority: ""
       clientId: kiss
-      clientSecret: ""
+      clientSecret: "<kiss>"
       medewerkerIdentificatie:
-        claim: preferred_username
+        claim: samaccountname
         truncate:
 
     organisatieIds: []
@@ -1844,9 +1844,9 @@ kiss:
 
       vac:
         manageFromKiss: false
-        baseUrl:
+        baseUrl: ""
         historyLimit: 1
-        objectTypeUrl:
+        objectTypeUrl: ""
         objectTypeVersion: 1
         resources: {}
         schedule: "*/59 * * * *"
@@ -1933,7 +1933,7 @@ kiss:
       vacUUID: ""
     esuite:
       baseUrl: ""
-      clientId: kiss
+      clientId: "<kiss>"
       secret: ""
       contactverzoektypen: []
       isDefault: true
@@ -2294,19 +2294,19 @@ ita:
 
   logboek:
     # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_ITA_ACTIVITEITENLOG_UUID_REP
+    type: "https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_ITA_ACTIVITEITENLOG_UUID_REP"
     typeVersion: 1
 
   afdeling:
     # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
     uuid: "REP_CONTACT_AFDELING_UUID_REP"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_AFDELING_UUID_REP
+    type: "https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_AFDELING_UUID_REP"
     typeVersion: 1
 
   groep:
     # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
     uuid: "REP_CONTACT_GROEP_UUID_REP"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_GROEP_UUID_REP
+    type: "https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_GROEP_UUID_REP"
     typeVersion: 1
 
   smtp:
